--- a/package.json
+++ b/package.json
@@ -1,41 +1,53 @@
 {
-  "private": true,
-  "displayName": "Plugin Name",
-  "name": "homebridge-plugin-name",
-  "version": "1.0.0",
-  "description": "A short description about what your plugin does.",
-  "license": "Apache-2.0",
-  "repository": {
-    "type": "git",
-    "url": "git://github.com/USERNAME/GITHUB_PROJECT_NAME.git"
-  },
-  "bugs": {
-    "url": "https://github.com/USERNAME/GITHUB_PROJECT_NAME/issues"
-  },
-  "engines": {
-    "node": ">=14.18.1",
-    "homebridge": ">=1.3.5"
-  },
+  "name": "homebridge-tempur-ergo-premier",
+  "version": "1.0.5",
+  "description": "Homebridge Plugin for Tempur-Ergo Premier Base",
   "main": "dist/index.js",
   "scripts": {
-    "lint": "eslint src/**.ts --max-warnings=0",
-    "watch": "npm run build && npm link && nodemon",
+    "clean": "rimraf ./dist",
     "build": "rimraf ./dist && tsc",
-    "prepublishOnly": "npm run lint && npm run build"
+    "lint": "eslint . --ext .ts --fix",
+    "prepublishOnly": "npm run build",
+    "postpublish": "npm run clean",
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "watch": "npm run build && npm link && nodemon"
   },
-  "keywords": [
-    "homebridge-plugin"
+  "author": "Kyle Denton",
+  "engines": {
+    "homebridge": ">=1.0.0"
+  },
+  "license": "ISC",
+  "files": [
+    "LICENSE",
+    "dist"
   ],
-  "dependencies": {},
+  "keywords": [
+    "homebridge-plugin",
+    "tempur-pedic",
+    "ergo",
+    "ergo premier"
+  ],
+  "repository": {
+    "type": "git",
+    "url": "git://github.com/ky13d3nt0n/homebridge-tempur-ergo-premier.git"
+  },
+  "bugs": {
+    "url": "https://github.com/ky13d3nt0n/homebridge-tempur-ergo-premier/issues"
+  },
   "devDependencies": {
-    "@types/node": "^16.10.9",
-    "@typescript-eslint/eslint-plugin": "^5.0.0",
-    "@typescript-eslint/parser": "^5.0.0",
-    "eslint": "^8.0.1",
-    "homebridge": "^1.3.5",
-    "nodemon": "^2.0.13",
+    "@types/node": "10.17.19",
+    "@typescript-eslint/eslint-plugin": "^5.7.0",
+    "@typescript-eslint/parser": "^5.7.0",
+    "eslint": "^8.5.0",
+    "eslint-plugin-import": "^2.25.3",
+    "homebridge": "1.0.4",
+    "nodemon": "^2.0.16",
     "rimraf": "^3.0.2",
-    "ts-node": "^10.3.0",
-    "typescript": "^4.4.4"
+    "typescript": "^3.8.3"
+  },
+  "dependencies": {
+    "buffer": "^6.0.3",
+    "dgram": "^1.0.1",
+    "dgram-as-promised": "^5.0.1"
   }
 }
